添加了'模板' '删除学生'功能 优化了界面

--- a/formwork.qrc
+++ b/formwork.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/excel_formwork">
         <file>formwork.xlsx</file>
+        <file>MOBAN.xlsx</file>
     </qresource>
 </RCC>
