--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -200,10 +200,18 @@
     <addaction name="ac_sortByID"/>
     <addaction name="ac_sortByToalScore"/>
    </widget>
+   <widget class="QMenu" name="menu_Da">
+    <property name="title">
+     <string>数据库(Da)</string>
+    </property>
+    <addaction name="ac_linkDataBase"/>
+    <addaction name="ac_unLink"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_3"/>
    <addaction name="menu_2"/>
    <addaction name="menu_5"/>
+   <addaction name="menu_Da"/>
    <addaction name="menu_4"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -599,6 +607,36 @@
    </property>
    <property name="toolTip">
     <string>设置自动保存时间</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::NoRole</enum>
+   </property>
+  </action>
+  <action name="ac_linkDataBase">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images2/grading_24dp.png</normaloff>:/images2/grading_24dp.png</iconset>
+   </property>
+   <property name="text">
+    <string>连接数据库</string>
+   </property>
+   <property name="toolTip">
+    <string>连接数据库</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::NoRole</enum>
+   </property>
+  </action>
+  <action name="ac_unLink">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images2/grid_on_24dp.png</normaloff>:/images2/grid_on_24dp.png</iconset>
+   </property>
+   <property name="text">
+    <string>断开连接</string>
+   </property>
+   <property name="toolTip">
+    <string>断开连接</string>
    </property>
    <property name="menuRole">
     <enum>QAction::NoRole</enum>
